--- a/mbake-blog/home/header.pug
+++ b/mbake-blog/home/header.pug
@@ -1,4 +1,12 @@
 .home-wrapper
+  .topbar-wrapper
+    .container.grid-xl
+      .topbar
+        div
+          i.far.fa-envelope
+          |  metabake@mbake.org
+        div
+          include social.pug
   .container.grid-xl
     include nav.pug
     
