[meta-website]: min js added

--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -40,7 +40,7 @@ html(lang='en_US')
 
       //- get the images
       script(src='//cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
-      script(src= '/assets/js/loader.js')
+      script(src= '/assets/js/loader.min.js')
 
       //- top css layout
       link(href='/assets/3rd/spectreTop.css', rel='stylesheet', type='text/css') 
