--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -935,9 +935,9 @@ button{text-transform:uppercase;letter-spacing:1px;}
 .cards-container .column{padding:.4rem;}
 .cards-container .card{box-shadow:0 0.25rem 1rem rgba(48,55,66,0.15);border:0;}
 .cards-container .card button{font-size:10px;padding:5px 15px;border-radius:5px;background-color:#289de9;border-color:#289de9;color:#fff;margin-bottom:12px;}
-.cards-container .card button:hover{background-color:#289de9;border-color:#289de9;}
+.cards-container .card button:hover,.cards-container .card button:focus{background-color:#289de9;border-color:#289de9;}
 .banner,.banner-home{display:flex;align-items:center;height:300px;}
 .banner-home{justify-content:center;height:500px;}
 .banner-home p{color:#fff;}
 .banner .date{color:#7c8499;}
-.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-05T17:24:25.140Z */
+.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-05T17:29:06.639Z */
