[tutorial]: mount docs update

--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -2,7 +2,7 @@
 link(href= '/assets/3rd/navJBar.css', rel='stylesheet')
 link(href= '/assets/css/nav.css',  rel='stylesheet')
 
-script(src='/assets/3rd/navJBar.js')
+script(src='/assets/3rd/navJBar.min.js')
 
 header.flex.edge
 
