--- a/mbake-blog/home/index.pug
+++ b/mbake-blog/home/index.pug
@@ -2,31 +2,60 @@ extends /layout/layout
 
 block main
   #pagination-container.custom-pagination
+    
+  form#srch-form.grid-form
+    fieldset
+      div(data-row-span='1')
+        div(data-field-span='1')
+          input#srchFld(type='text')
+  button#srchBut.btn Search  
   card-comp  
   
   script.
+    
     axios.get('../posts/items.json').then(function(resp) {
-       resp.data.items = resp.data.items.filter(item => item.publish1 === true);
        posts = resp.data;
-       console.info('resp.data --------->', posts);
+       loadjs.done('posts')
     
        const tag = riot.mount('card-comp')[0]; 
-       console.info('posts.items ------------>', posts.items);
-       tag.render(posts.items);
        
-       
-       depp.require(['cssJs'], function() {
+       /* depp.require(['cssJs'], function() {
             pgContainer =[];
             pgContCount=-1;
             setupPg(guessShow(), posts);
-         });
+         }); */
+       
+       loadjs.ready(['cssJs','posts'], function () {
+          const srchOptions = {
+             shouldSort: true,
+             threshold: 0.3,
+             maxPatternLength: 64,
+             keys: [
+                "title",
+                "subtitle",
+                "paragraph_1",
+                "paragraph_1",
+                "topic",
+                "url"
+             ]
+          }
 
+          $('#srch-form').disableAutoFill()
+
+          pgContainer =[]
+          pgContCount=-1
+          setupPg(guessShow(), posts)
+          fuse = new Fuse(posts.items, srchOptions)
+
+          $( "#srchBut" ).click(onSrch)
+       })
+       
        function setupPg(perPage, posts_) {
-          console.info('PG');
-          pgContCount++;
-          console.info('s', pgContCount);
-          pgContainer[pgContCount] = $('#pagination-container');
-
+          console.log('PG')
+          pgContCount++
+          console.log('s', pgContCount)
+          pgContainer[pgContCount] = $('#pagination-container')
+          
           perPage = 3;
 
           pgContainer[pgContCount].pagination({
@@ -37,19 +66,48 @@ block main
              autoHidePrevious: true,
              autoHideNext: true,
              callback: function(data, pagination) {
-                tag.render(data);
+                tag.render(data)
              }
           })
 
        }//()
+       
+       function userSzSc() {
+          console.log('resize|scroll')
+          guessShow()
+       }
 
        function guessShow() {
-          let n = ( $(window).width() * $(window).height()  ) / ( 300 * 400) * .9;
-          n = Math.round( n * .7);
-          console.info('g', n);
-          return n;
+          let n = ( $(window).width() * $(window).height()  ) / ( 300 * 400) * .9
+          n = Math.round( n * .7)
+          console.log('g', n)
+          return n
        }
-       
+
+       function onSrch() {
+          let s = $( "#srchFld" ).val()
+          console.log('srch', s)
+          pgContainer[pgContCount].pagination('disable')
+          pgContainer[pgContCount].pagination('hide')
+          pgContainer[pgContCount].pagination('destroy')
+
+          if(!s || s.length < 1) {
+             setupPg(guessShow(), posts)
+             return
+          }//fi
+
+          //else we search
+          let items = fuse.search(s)
+           if(!items || items.length < 1) {// not found
+             tag.render()
+             return
+          }//fi
+
+          let found = {}
+          found.items = items
+          setupPg(guessShow(), found)
+       }//()
+          
      });
-  
+    
   
