--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -11,7 +11,8 @@ html(lang='en')
     //- icons
     link(href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', rel='stylesheet', crossorigin='anonymous')
     link(href='/assets/css/style.css', rel='stylesheet')
-          
+    
+    script(src='https://cdn.jsdelivr.net/npm/loadjs@3.5.4/dist/loadjs.js')      
     script(src='https://cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
     script(src=ROOT+ 'home/comps/card-comp.min.js') 
