--- a/mbake-blog/assets/scss/_components.scss
+++ b/mbake-blog/assets/scss/_components.scss
@@ -1,5 +1,30 @@
 //- Cards
 
+.section-cards {
+	display: flex;
+	justify-content: flex-start;
+	margin: 1rem 0;
+	input, button {
+		border-radius: 50px;
+	}
+	input.input-lg, button.btn-lg {
+		font-size: 14px;
+	}
+	input.input-lg {
+		&:focus {
+			border-color: $blue-sky;
+		}
+	}
+	button.btn-lg {
+		background-color: $mine-shaft;
+		border-color: $mine-shaft;
+		&:hover, &:focus {
+			background-color: $blue-sky;
+			border-color: $blue-sky;
+		}
+	}
+}
+
 .cards-container {
 	.column {
 		padding: .4rem;
@@ -12,13 +37,13 @@
 			font-size: 10px;
 			padding: 5px 15px;
 			border-radius: 5px;
-			background-color: #289de9;
-			border-color: #289de9;
+			background-color: $blue-sky;
+			border-color: $blue-sky;
 			color: $white;
 			margin-bottom: 12px;
 			&:hover, &:focus {
-				background-color: #289de9;
-				border-color: #289de9;
+				background-color: $blue-sky;
+				border-color: $blue-sky;
 			}
 		}
 	}
