move folders to layout

--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -22,9 +22,9 @@ html(lang='en')
     script(src= ROOT + 'assets/js/setup.js')
   body
     
-    include /home/header
+    include header
     
     .container.grid-xl  
       block main
       
-    include /home/footer
+    include footer
