--- a/mbake-blog/posts/post-7/index.pug
+++ b/mbake-blog/posts/post-7/index.pug
@@ -8,6 +8,6 @@ block main
         i.far.fa-clock
         |  
         span=date   
-  img.img-responsive(src=img_url)
+  img.img-responsive(src=image)
   .content-post
     include:metaMD text.md
