[mbake-blog]fix: yaml fields add

--- a/mbake-blog/layout/social.pug
+++ b/mbake-blog/layout/social.pug
@@ -2,7 +2,6 @@ mixin social()
   a.social-icon(href='#')
     i(class!=attributes.class)
       
-+social(class="fab fa-facebook-f")
-+social(class="fab fa-instagram")
++social(class="fab fa-linkedin-in")
 +social(class="fab fa-twitter")
-+social(class="fab fa-google-plus-g")      
++social(class="fab fa-youtube")      
