[mbake-blog]: styles and layout update, deppjs and collection.js add

--- a/mbake-blog/layout/footer.pug
+++ b/mbake-blog/layout/footer.pug
@@ -1,7 +1,7 @@
 footer
-  div 
-    | Copyright © 2019 
-    strong  mBake
+  .wide-letters
+    | &#169; 2019 
+    a(href='https://github.com/metabake')  Metabake
     |  All Rights Reserved
   div 
     include social.pug
