--- a/mbake-blog/layout/header.pug
+++ b/mbake-blog/layout/header.pug
@@ -4,7 +4,7 @@
       .topbar
         div
           i.far.fa-envelope
-          |  metabake@mbake.org
+          a(href='mailto:metabake@mbake.org') metabake@mbake.org
         div
           include social.pug
   .container.grid-xl
