--- a/mbake-blog/layout/nav.pug
+++ b/mbake-blog/layout/nav.pug
@@ -16,6 +16,6 @@ mixin link(path, name)
       header.navbar
         section.navbar-section
           a.mr-2.navbar-brand(href=ROOT + 'home') 
-            h2 mBake
+            h2 Metabake
         section.navbar-section.hide-md
           +link(ROOT + 'home', 'home')
