--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -1,102 +1,122 @@
 .container {
-	@media (max-width: 960px) { padding: 0 15px;}
+    @media (max-width: 960px) { padding: 0 15px;}
 }
 
 // HOME
 .home-wrapper {
-	background: linear-gradient(rgba(34,147,215, 0.8), rgba(34,147,215, 0.8)), url('../img/home-bg.jpg') no-repeat center center;
-	background-size: cover;
-	color: $white;
-	text-align: center;
-	position: relative;
-	.topbar-wrapper {
-		background: rgba(0,0,0,0.2);
-		border-color: rgba(0,0,0,0);
-		padding: 5px 0px;
-		.topbar {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 0 .4rem;
-			@media (max-width: 600px) {
-				flex-direction: column;
-			}
-			.social-icon {
-				color: $white !important;
-			}
-		}
-	}
-	.shape {
-		position: absolute;
-		bottom: 0;
-		right: 0;
-		left: 0;
-		top: 80%;
-    fill: currentColor;
-	}
+    background: linear-gradient(rgba(34,147,215, 0.8), rgba(34,147,215, 0.8)), url('../img/home-bg.jpg') no-repeat center center;
+    background-size: cover;
+    color: $white;
+    text-align: center;
+    position: relative;
+    .topbar-wrapper {
+        background: rgba(0,0,0,0.2);
+        border-color: rgba(0,0,0,0);
+        padding: 5px 0px;
+        .topbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 .4rem;
+            @media (max-width: 600px) {
+                flex-direction: column;
+            }
+            .social-icon {
+                color: $white !important;
+            }
+            a {
+                &, &:hover, &:active, &:focus {
+                    color: white;
+                } 
+            }
+            .fa-envelope {
+                margin-right: 7px;
+            }
+        }
+    }
+    .shape {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        top: 80%;
+        fill: currentColor;
+    }
 }
 
 //- Navbar
 
 .off-canvas .off-canvas-toggle {
-	top: auto;
-	background: $white;
-	border-color: $white;
-	color: $black;
-	&:hover {
-		background-color: #222222;
-		border-color: #222222;
-	}
+    top: auto;
+    background: $white;
+    border-color: $white;
+    color: $black;
+    &:hover {
+        background-color: #222222;
+        border-color: #222222;
+    }
 }
 
 header {
-	padding: 20px 0;
-	.navbar-brand {
-		color: $white;
-		&:visited {
-			color: $white;
-		}
-	}
-	a {
-		@media (max-width: 840px) { margin-left: auto; }
-	}
+    padding: 20px 0;
+    .navbar-brand {
+        color: $white;
+        &:visited {
+            color: $white;
+        }
+    }
+    a {
+        @media (max-width: 840px) { margin-left: auto; }
+    }
 }
 
 //- social
 
 .social-icon {
-  color: $acadia !important;
-	i {
-		text-align: center;
-		width: 30px;
-		height: 30px;
-		line-height: 30px;
-		margin: 0 5px;
-		border-radius: 2px;
-	}
+    color: $acadia !important;
+    i {
+        text-align: center;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        margin: 0 5px;
+        border-radius: 2px;
+    }
 }
 
 
 //- Pagination
 
 .custom-pagination {
-	margin: 1rem auto;
-	display: table;
+    margin: 1rem auto;
+    display: table;
 }
 
 //- Footer
 
 footer {
-	display: flex;
-	justify-content: space-between;
-	color: $waterloo;
-	font-size: 13px;
-	padding: 20px 0;
-	margin: 50px 15px;
-	border-top: 1px solid #d4deeb;
-	@media (min-width: 1500px) {margin: 50px;}
-	@media (max-width: 600px) {
-		flex-direction: column;
-		text-align: center;
-	}
+    display: flex;
+    justify-content: space-between;
+    color: $waterloo;
+    font-size: 13px;
+    padding: 20px 0;
+    margin: 50px 15px;
+    border-top: 1px solid #d4deeb;
+    @media (min-width: 1500px) {margin: 50px;}
+    @media (max-width: 600px) {
+        flex-direction: column;
+        text-align: center;
+    }
+    a {
+        &, &:hover, &:active, &:focus, &:visited {
+            color: $blue-sky;
+        }
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+    .wide-letters {
+        letter-spacing: 1px;
+        word-spacing: 1px;
+    }
 }
