--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -5,7 +5,7 @@ html(lang='en')
     script.
        ROOT = '#{ROOT}' //- sets global pug and .js from dat.yaml
        let _start = Date.now()
-    meta(content='width=device-width,initial-scale=1', name='viewport')
+    meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover")
     title Metabake Blog
       
     //- icons
