--- a/meta-website/layout/nav-m.pug
+++ b/meta-website/layout/nav-m.pug
@@ -7,28 +7,26 @@ header.flex.edge.header-amp
    .right
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
          li
-            a.why-MetaBake(href='#') Why MetaBake
+            a.landing(href='#') Why MetaBake
             ul
                li
-                  a(href='/why-MetaBake/why-MetaBake/') Why MetaBake
+                  a(href='/landing/why/') Why MetaBake
                li
-                  a(href='/why-MetaBake/MetaBake-vs-other-low-code/') MetaBake vs. Other low-code
+                  a(href='/landing/low-code/') MetaBake vs. Other low-code
                li
-                  a(href='/why-MetaBake/MetaBake-vs-hugo/') MetaBake vs. Hugo
+                  a(href='/landing/static-gen/') MetaBake vs. Hugo
                li
-                  a(href='/why-MetaBake/MetaBake-vs-gulp-and-grunt/') MetaBake vs. Gulp and Grunt
+                  a(href='/landing/gulp-and-grunt/') MetaBake vs. Gulp and Grunt
+               li
+                  a(href='/landing/cms/') MetaBake vs. Gulp and Grunt
          li
-            a.who-benefits(href='/who-benefits/') Who Benefits
+            a.who-benefits(href='/use-case/benefits') Who Benefits
          li
             a.get-started(href='/get-started/') Get Started
          li
             a.about(href='#') about
             ul
                li
-                  a(href='/about/about/') About Us
+                  a(href='/zabout/about/') About Us
                li
-                  a(href='/about/vic-cekvenich/') Victor Cekvenich
-               li
-                  a(href='/about/support/') support
-               li
-                  a(href='/about/contact/') contact us
+                  a(href='/zabout/contact/') contact us
