--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -1,5 +1,5 @@
 
-link(href= '/assets/3rd/navJBar.css', rel='stylesheet')
+link(href= '/assets/css/navJBar.css', rel='stylesheet')
 link(href= '/assets/css/nav.css',  rel='stylesheet')
 
 script(src='/assets/3rd/navJBar.min.js')
@@ -23,6 +23,8 @@ header.flex.edge
                   a(href='/landing/static-gen/') MetaBake vs. Hugo, StaticGen
                li
                   a(href='/landing/gulp-grunt/') MetaBake vs. Gulp, Grunt
+               li
+                  a(href='/landing/CMS/') MetaBake vs. WP, CMS
                li
                   a(href='/landing/download/') Download
 
