--- a/meta-website/layout/foot2.pug
+++ b/meta-website/layout/foot2.pug
@@ -29,6 +29,6 @@ footer
          //- a(href='#')
          //-    include ../assets/img/svg/linkedin-logo.svg
          a(href='https://www.youtube.com/', target='_blank')
-            include ../assets/img/svg/youtube-play-button.svg
+            include /assets/img/svg/youtube-play-button.svg
          //- a(href='#')
          //-    include ../assets/img/svg/twitter-logo.svg
