--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -42,7 +42,7 @@ html(lang='en_US')
       script(src='//cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
 
       //- top css layout
-      link(href='/assets/3rd/spectreTop.css', rel='stylesheet', type='text/css') 
+      link(href='/assets/css/spectreTop.css', rel='stylesheet', type='text/css') 
       style.
          .delayShowing { opacity: 0 !important; }
 
@@ -50,7 +50,7 @@ html(lang='en_US')
       block head2
 
    body
-      script(src= '/assets/js/loader.min.js', async='')
+      script(src= '/assets/js/loader.js', async='')
 
       include navJBar
 
