--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -32,7 +32,7 @@ header.flex.edge
             a(href='/get-started/') Get Started
 
          li
-            a(href='/use-cases/benefits/') Who Benefits
+            a(href='/use-case/benefits/') Who Benefits
 
 
          li
