[mbake-blog]: header styles and layout update

--- a/mbake-blog/assets/scss/_components.scss
+++ b/mbake-blog/assets/scss/_components.scss
@@ -48,3 +48,21 @@
 		}
 	}
 }
+
+.banner {
+	display: flex;
+	align-items: center;
+	height: 300px;
+}
+
+//- POST PAGE
+.banner {
+	.date {
+		color: $waterloo;
+	}
+}
+
+
+.content-post {
+	padding: 50px 0;
+}
