--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -17,7 +17,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 .4rem;
+            padding: 0;
+            justify-content: flex-end;
             @media (max-width: 600px) {
                 flex-direction: column;
             }
@@ -32,6 +33,21 @@
             .fa-envelope {
                 margin-right: 7px;
             }
+            div {
+                margin-left: 1rem;
+            }
+            .email {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                i {
+                    flex-shrink: 0;
+                }
+                a {
+                    font-weight: 200;
+                    font-size: 12px;
+                }
+            }
         }
     }
     .shape {
@@ -41,6 +57,20 @@
         left: 0;
         top: 80%;
         fill: currentColor;
+    }
+    .off-canvas-content {
+        padding: 0;
+    }
+    header {
+        padding: 2rem 0 4rem 0;
+        .btn.btn-link, a {
+            &, &:hover, &:active, &:focus, &:visited {
+                border: 0;
+                text-decoration: none;
+                outline: none;
+                box-shadow: none;
+            }
+        }
     }
 }
 
@@ -61,12 +91,41 @@ header {
     padding: 20px 0;
     .navbar-brand {
         color: $white;
+        display: flex;
+        align-items: stretch;
+        justify-content: flex-start;
         &:visited {
             color: $white;
+        }
+        span {
+            background: url(../img/logo.jpg) center center / contain, no-repeat;
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            margin: -2px 1rem 0 0;
+            border-radius: 3px;
+            flex-shrink: 0;
+        }
+        .name-wrap {
+            text-align: left;
+            margin: -4px 0;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            align-items: stretch;
+            margin-bottom: -6px;
+        }
+        .slogan {
+            font-size: 10px;
+            padding-left: 2px;
+            text-transform: capitalize;
         }
     }
     a {
         @media (max-width: 840px) { margin-left: auto; }
+    }
+    h2 {
+        margin: 0;
     }
 }
 
