--- a/mbake-blog/layout/header.pug
+++ b/mbake-blog/layout/header.pug
@@ -2,7 +2,7 @@
   .topbar-wrapper
     .container.grid-xl
       .topbar
-        div
+        .email
           i.far.fa-envelope
           a(href='mailto:metabake@mbake.org') metabake@mbake.org
         div
@@ -10,13 +10,6 @@
   .container.grid-xl
     include nav.pug
     
-    .banner-home
-      div
-        h1 Lorem ipsum
-        p 
-        | Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
-        br 
-        | incididunt ut labore et dolore magna
   div.shape
     svg(preserveAspectRatio='none', xmlns='http://www.w3.org/2000/svg', width='100%', height='100%', viewBox='0 0 1920 217')
       g(fill-rule='evenodd', transform='matrix(-1 0 0 1 1920 0)')
