--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -1,6 +1,12 @@
 doctype html
 html(lang='en')
   head
+    script.
+        (function(_,e,rr,s){_errs=[s];var c=_.onerror;_.onerror=function(){var a=arguments;_errs.push(a);
+        c&&c.apply(this,a)};var b=function(){var c=e.createElement(rr),b=e.getElementsByTagName(rr)[0];
+        c.src="//beacon.errorception.com/"+s+".js";c.async=!0;b.parentNode.insertBefore(c,b)};
+        _.addEventListener?_.addEventListener("load",b,!1):_.attachEvent("onload",b)})
+        (window,document,"script","5c9366bda02fd608f58b0a8b");
     meta(charset='utf-8')
     script.
        ROOT = '#{ROOT}' //- sets global pug and .js from dat.yaml
