--- a/mbake-blog/home/index.pug
+++ b/mbake-blog/home/index.pug
@@ -1,7 +1,7 @@
-extends /layout/layout
+extends /layout/layout-front
 
 block main
-    .section-cards
+    .section-cards.search-wrapper
         .input-group#srch-form
             input#srchFld.form-input.input-lg(type='text')
             button#srchBut.btn.btn-primary.input-group-btn.btn-lg
