--- a/mbake-blog/layout/header.pug
+++ b/mbake-blog/layout/header.pug
@@ -1,18 +1,11 @@
-.home-wrapper
+.home-wrapper.inner
   .topbar-wrapper
     .container.grid-xl
       .topbar
         .email
-          i.far.fa-envelope
+          i.icono-mail
           a(href='mailto:metabake@mbake.org') metabake@mbake.org
         div
           include social.pug
   .container.grid-xl
     include nav.pug
-    
-  div.shape
-    svg(preserveAspectRatio='none', xmlns='http://www.w3.org/2000/svg', width='100%', height='100%', viewBox='0 0 1920 217')
-      g(fill-rule='evenodd', transform='matrix(-1 0 0 1 1920 0)')
-        path(d='M0,57.46875 C203.364583,135.217754 494.835938,156.564108 874.414062,121.507813 C1192.61198,-13.9827666 1541.14063,-35.3291208 1920,57.46875 L1920,207 L0,207 L0,57.46875 Z', opacity='.3')
-        path(d='M0,79 C292.46875,165.453125 612.46875,165.453125 960,79 C1307.53125,-7.453125 1627.53125,-7.453125 1920,79 L1920,207 L0,207 L0,79 Z', opacity='.6')
-        path(d='M0,89 C288.713542,146.786458 608.713542,146.786458 960,89 C1311.28646,31.2135417 1631.28646,31.2135417 1920,89 L1920,217 L0,217 L0,89 Z')
