--- a/meta-website/layout/nav-m.pug
+++ b/meta-website/layout/nav-m.pug
@@ -3,7 +3,7 @@ header.flex.edge.header-amp
       a(href='/')#logo
          span Meta
          | bake
-      .site-title MetaBake is the extensible low-code productivity tool that simplifies the process for building great software.
+      .site-title MetaBake&trade; is the extensible low-code productivity tool that simplifies the process for building great software.
    .right
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
          li
@@ -12,13 +12,13 @@ header.flex.edge.header-amp
                li
                   a(href='/landing/why/') Why MetaBake
                li
-                  a(href='/landing/low-code/') MetaBake vs. Other low-code
+                  a(href='/landing/low-code/') MetaBake&trade; vs. Other low-code
                li
-                  a(href='/landing/static-gen/') MetaBake vs. Hugo
+                  a(href='/landing/static-gen/') MetaBake&trade; vs. Hugo
                li
-                  a(href='/landing/gulp-and-grunt/') MetaBake vs. Gulp and Grunt
+                  a(href='/landing/gulp-and-grunt/') MetaBake&trade; vs. Gulp and Grunt
                li
-                  a(href='/landing/cms/') MetaBake vs. Gulp and Grunt
+                  a(href='/landing/cms/') MetaBake&trade; vs. Gulp and Grunt
          li
             a.who-benefits(href='/use-case/benefits') Who Benefits
          li
