--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -12,7 +12,7 @@ html(lang='en')
        ROOT = '#{ROOT}' //- sets global pug and .js from dat.yaml
        let _start = Date.now()
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover")
-    title Metabake Blog
+    title MetaBake&trade; Blog
       
     //- icons
     link(href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', rel='stylesheet', crossorigin='anonymous')
