--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -18,13 +18,13 @@ header.flex.edge
                li
                   a(href='/landing/why/') Why MetaBake
                li
-                  a(href='/landing/low-code/') MetaBake vs. low-code
+                  a(href='/landing/low-code/') MetaBake&trade; vs. low-code
                li
-                  a(href='/landing/static-gen/') MetaBake vs. Hugo, StaticGen
+                  a(href='/landing/static-gen/') MetaBake&trade; vs. Hugo, StaticGen
                li
-                  a(href='/landing/gulp-grunt/') MetaBake vs. Gulp, Grunt
+                  a(href='/landing/gulp-grunt/') MetaBake&trade; vs. Gulp, Grunt
                li
-                  a(href='/landing/CMS/') MetaBake vs. WP, CMS
+                  a(href='/landing/CMS/') MetaBake&trade; vs. WP, CMS
                li
                   a(href='/landing/download/') Download
 
