--- a/mbake-blog/layout/footer.pug
+++ b/mbake-blog/layout/footer.pug
@@ -1,7 +1,7 @@
 footer
   .wide-letters
     | &#169; 2019 
-    a(href='https://github.com/metabake')  Metabake
+    a(href='http://github.com/metabake')  Metabake
     |  All Rights Reserved
   div 
     include social.pug
