--- a/mbake-blog/layout/layout-front.pug
+++ b/mbake-blog/layout/layout-front.pug
@@ -19,10 +19,10 @@ html(lang='en')
     link(href='/assets/css/style.css', rel='stylesheet')
     
     script(src='//cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.min.js')      
-    script(src='http://cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
+    script(src='//cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
     script(src=ROOT+ 'home/comps/card-comp.min.js') 
       
-    script(src='http://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
+    script(src='//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
     script(src= ROOT + 'assets/js/setup.js')
 
     script(src="//instant.page/1.2.2", type="module", integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU")
