--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -62,7 +62,7 @@ script.
 
    function setupNav() {
       console.info('navJBar')
-      new Navbar('.navJBar') // top
+      new Navbar('.navJBar') //- top
 
       //toggle
       $( "#navBarCont" ).click(function() { //side
