--- a/pro/index.pug
+++ b/pro/index.pug
@@ -6,14 +6,14 @@ body
       function fooA(arg) {
          return new Promise(function(resolve, reject) {
             console.log(arg)
-            // something comes back from www
+            //- something comes back from www
             resolve('bla1')
          })
       }
       function fooB(arg) {
          return new Promise(function(resolve, reject) {
             console.log(arg)
-            // something comes back from www
+            //- something comes back from www
             resolve('bla2')
          })
       }
@@ -21,7 +21,7 @@ body
       //regular
       pro = fooA(1)
       pro.then(function(ret) {
-         // do something
+         //- do something
          console.log('one', ret)
       })
 
@@ -29,6 +29,6 @@ body
       pro1 = fooA(2)
       pro2 = fooB(3)
       Promise.all([pro1, pro2]).then(function(ret) {
-         // do something
+         //- do something
          console.log('all', ret)
       })
