--- a/meta-website/get-started/index.pug
+++ b/meta-website/get-started/index.pug
@@ -6,9 +6,9 @@ block main
       include:metaMD text.md
 
       br
-      a(href='http://forum.mbake.org') Forum
+      a(href='http://forum.MetaBake.org') Forum
       br
-      a(href='http://git.mbake.org') GitHub
+      a(href='http://git.MetaBake.org') GitHub
       br
-      a(href='http://docs.mbake.org') Docs
+      a(href='http://docs.MetaBake.org') Docs
 
