--- a/site/landing/home/index.pug
+++ b/site/landing/home/index.pug
@@ -1,7 +1,7 @@
 head
-    include ../site/headFrag
+    include /site/headFrag
 
-    script(src='../site/ui-loader.js')
+    script(src='/site/ui-loader.js')
 body
 
     main(role='main')
@@ -9,7 +9,7 @@ body
         .jumbotron
             .container
             h1.display-3 INTUITION.DEV
-            include ../text/motto.md
+            include /text/motto.md
             p
                 a.btn.btn-primary.btn-lg(href='#', role='button') Learn more »
 
