--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -5,3 +5,53 @@ head
 body
 
     p oh hi
+
+    .container
+        .row
+            .col-md-5
+                p Hi
+                .site-list
+                    include:metaMD /text/features1.md
+
+            .col-md-5
+                p Hi
+                .site-list
+                    include:metaMD /text/features2.md
+
+
+    style.
+        .site-list > ol {
+            counter-reset:li; /* Initiate a counter */
+        }
+        .site-list > ol > li {
+            position:relative; /* Create a positioning context */
+            margin:0 0 6px 2em; /* Give each list item a left margin to make room for the numbers */
+            padding:4px 8px; /* Add some spacing around the content */
+            list-style:none; /* Disable the normal item numbering */
+            border-top:1px solid #666;
+            background: #f6f6f6;
+        }
+
+        .site-list > ol > li:before {
+            /* Position and style the number */
+            position:absolute;
+
+            content:counter(li); /* Use the counter as content */
+            counter-increment:li; /* Increment the counter by 1 */
+
+            top:-1px;
+            left:-2em;
+            -moz-box-sizing:border-box;
+            -webkit-box-sizing:border-box;
+            box-sizing:border-box;
+            width:2em;
+            padding: 4px;
+            border-top: 2px solid #666;
+            color:#fff;
+            background:#666;
+            font-weight:bold;
+            font-family:"Helvetica Neue", Arial, sans-serif;
+            text-align:center;
+
+        }
+
