--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -10,34 +10,35 @@ body
         .row
             .col-md-5
                 p Hi
-                .site-list
+                .feat-list
                     include:metaMD /text/features1.md
 
             .col-md-5
                 p Hi
-                .site-list
+                .feat-list
                     include:metaMD /text/features2.md
 
 
     style.
-        .site-list > ol {
-            counter-reset:li; /* Initiate a counter */
+        body {
+            counter-reset: lic;
         }
-        .site-list > ol > li {
+        ol {
+            list-style-type: none;
+        }
+        ol > li {
             position:relative; /* Create a positioning context */
             margin:0 0 6px 2em; /* Give each list item a left margin to make room for the numbers */
             padding:4px 8px; /* Add some spacing around the content */
-            list-style:none; /* Disable the normal item numbering */
             border-top:1px solid #666;
             background: #f6f6f6;
         }
-
-        .site-list > ol > li:before {
+        ol > li:before {
             /* Position and style the number */
             position:absolute;
 
-            content:counter(li); /* Use the counter as content */
-            counter-increment:li; /* Increment the counter by 1 */
+            counter-increment:lic; /* Increment the counter by 1 */
+            content:counter(lic); /* Use the counter as content */
 
             top:-1px;
             left:-2em;
