--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -14,7 +14,7 @@ body
                     include:metaMD /text/features1.md
 
             .col-md-5
-                p Hi
+                p Hi2
                 .feat-list
                     include:metaMD /text/features2.md
 
@@ -30,8 +30,10 @@ body
             position:relative; /* Create a positioning context */
             margin:0 0 6px 2em; /* Give each list item a left margin to make room for the numbers */
             padding:4px 8px; /* Add some spacing around the content */
-            border-top:1px solid #666;
+            padding-left: 4px;
+            border-top:2px solid #666;
             background: #f6f6f6;
+            min-height: 50px;
         }
         ol > li:before {
             /* Position and style the number */
@@ -40,19 +42,13 @@ body
             counter-increment:lic; /* Increment the counter by 1 */
             content:counter(lic); /* Use the counter as content */
 
-            top:-1px;
-            left:-2em;
-            -moz-box-sizing:border-box;
-            -webkit-box-sizing:border-box;
-            box-sizing:border-box;
+            top:-6px;
+            left:-68px;
             width:2em;
-            padding: 4px;
-            border-top: 2px solid #666;
-            color:#fff;
-            background:#666;
-            font-weight:bold;
-            font-family:"Helvetica Neue", Arial, sans-serif;
+          
             text-align:center;
-
+            color:#999;
+            
+            font: italic 38px/1.5 "Helvetica Neue", Arial, sans-serif;
         }
 
