--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -1,7 +1,7 @@
 head
-    include /site/headFrag
+    include /layout/headFrag
 
-    script(src='/site/ui-loader.js')
+    script(src='/layout/ui-loader.js')
 body
 
     p oh hi
